--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "server",
   "version": "0.0.0",
+  "engines": {
+    "node": "18.x"
+  },
   "private": true,
   "scripts": {
     "dev": "nodemon ./bin/www",
