--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -36,7 +36,7 @@ jobs:
 
           # Create application version
           aws elasticbeanstalk create-application-version \
-            --application-name Messenger App \
+            --application-name Messenger_App \
             --version-label $GITHUB_SHA \
             --source-bundle S3Bucket=elasticbeanstalk-us-east-1-430567120029,S3Key=$GITHUB_SHA.zip
 
