--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,6 +29,11 @@ jobs:
           cd server
           npm ci
 
+      - name: Set AWS Region
+        run: |
+          echo "[default]" >> $HOME/.aws/config
+          echo "region = us-east-1" >> $HOME/.aws/config
+
       - name: Deploy to Elastic Beanstalk
         run: |
           pip install awscli --upgrade --user
@@ -39,13 +44,12 @@ jobs:
             --application-name Messenger_App \
             --version-label $GITHUB_SHA \
             --source-bundle S3Bucket=elasticbeanstalk-us-east-1-430567120029,S3Key=$GITHUB_SHA.zip
-            --region us-east-1 
+           
             
           # Update environment with the new version
           aws elasticbeanstalk update-environment \
             --environment-name MessengerApp-env \
             --version-label $GITHUB_SHA
-            --region us-east-1
 
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
