--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,11 +29,14 @@ jobs:
           cd server
           npm ci
 
-      - name: Create AWS Configuration
+      - name: Configure AWS Credentials
         run: |
           mkdir $HOME/.aws
           echo "[default]" > $HOME/.aws/config
           echo "region = us-east-1" >> $HOME/.aws/config
+          echo "[default]" > $HOME/.aws/credentials
+          echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> $HOME/.aws/credentials
+          echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> $HOME/.aws/credentials
 
       - name: Generate and Upload ZIP File to S3
         run: |
