--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.4",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
