--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,18 @@ jobs:
           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws configure set region us-east-1
 
-     
-      - name: SSH into EC2 and Start Docker Container
+      - name: Configure SSH
         run: |
-          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@54.224.72.128  "cd /var/www && git clone https://github.com/khalil0525/Messenger-app.git . && docker-compose up -d"
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy-key.pem
+          chmod 600 ~/.ssh/deploy-key.pem
+          cat >> ~/.ssh/config <<END
+          Host my-vps
+            HostName ${{ secrets.SSH_IP }}
+            User ${{ secrets.SSH_USER }}
+            IdentityFile ~/.ssh/deploy-key.pem
+            StrictHostKeyChecking no
+          END
+
+      - name: Deploy site
+        run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@54.224.72.128  "cd /var/www && git clone https://github.com/khalil0525/Messenger-app.git . && docker-compose up -d"
