--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
           END
 
       - name: Deploy site
-        run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@54.224.72.128  "cd /var/www && git clone https://github.com/khalil0525/Messenger-app.git . && docker-compose up -d"
+        run: ssh my-vps "cd /var/www && git clone https://github.com/khalil0525/Messenger-app.git . && docker-compose up -d"
