Changes to main

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Configure AWS Credentials
-        run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set region us-east-1
-
       - name: Configure SSH
         run: |
           mkdir -p ~/.ssh/
@@ -32,5 +23,9 @@ jobs:
             StrictHostKeyChecking no
           END
 
-      - name: Deploy site
-        run: ssh my-vps "cd /var/www && git clone https://github.com/khalil0525/Messenger-app.git . && docker-compose up -d"
+      - name: Remove existing files
+        run: ssh my-vps "rm -rf /var/www/*"
+
+      - name: Clone repository and start Docker
+        run: |
+          ssh my-vps "cd /var/www && git clone https://github.com/khalil0525/Messenger-app.git . && docker-compose up -d"
