--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,14 @@ jobs:
           ssh my-vps "mv /tmp/messenger-app/* /var/www"
 
       - name: Start Docker
-        run: ssh my-vps "cd /var/www && sudo docker-compose up -d"
+        run: ssh my-vps "cd /var/www && docker-compose exec -T app env \
+          NODEMAILER_EMAIL=${{ secrets.NODEMAILER_EMAIL }} \
+          NODEMAILER_PASS=${{ secrets.NODEMAILER_PASS }} \
+          DB_DATABASE=${{ secrets.DB_NAME }} \
+          DB_USER=${{ secrets.DB_USER }} \
+          DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+          DB_HOST=${{ secrets.DB_HOST }} \
+          DB_PORT=${{ secrets.DB_PORT }} \
+          SESSION_SECRET=${{ secrets.SESSION_SECRET }} \
+          PORT=${{ secrets.PORT }} \
+          ENV=${{ secrets.ENV }}"
