--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Start Docker
         run: |
           ssh my-vps "cd /var/www && sudo docker-compose up -d"  # Start the Docker services
-          ssh my-vps "cd /var/www && sudo docker-compose exec -T app env \
+          ssh my-vps "cd /var/www && sudo docker-compose exec -T www-app-1 env \
             NODEMAILER_EMAIL=${{ secrets.NODEMAILER_EMAIL }} \
             NODEMAILER_PASS=${{ secrets.NODEMAILER_PASS }} \
             DB_DATABASE=${{ secrets.DB_NAME }} \
