--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       NODEMAILER_EMAIL: $NODEMAILER_EMAIL
       NODEMAILER_PASS: $NODEMAILER_PASS
-      DB_DATABASE: $DB_NAME
+      DB_DATABASE: $DB_DATABASE
       DB_USER: $DB_USER
       DB_PASSWORD: $DB_PASSWORD
       DB_HOST: $DB_HOST
