--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
   nginx:
     container_name: nginx
     restart: always
+    image: jonasal/nginx-certbot
     ports:
       - 80:80
     volumes:
