--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.1445.0",
     "connect-session-sequelize": "^7.0.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -22,6 +23,8 @@
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
