--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,11 @@ jobs:
           node-version: 14
 
       - name: Install Dependencies
+        working-directory: ./client
         run: npm install
 
       - name: Build React App
+        working-directory: ./client
         run: npm run build
   deploy:
     runs-on: ubuntu-latest
