--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm run build
   deploy:
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
       - name: Configure SSH
         run: |
