--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,14 @@ jobs:
       - name: Build React App
         working-directory: ./client
         run: npm run build
+
+      - name: Commit Build to Repository
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add -A
+          git commit -m "Add built React app"
+          git push
   deploy:
     runs-on: ubuntu-latest
     needs: build
