--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
@@ -33,6 +41,7 @@ jobs:
           git add -A
           git commit -m "Add built React app"
           git push
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
